# my-fastapi-project

./: main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: main.py
